# KUBE-AGENT

./: .dockerignore  .env.example  .gitignore  README.md  docker-bake.hcl  docker-compose.yml  implementation_plan.md  kubemind-agent.yaml  setup.cfg
agent/: main.py  requirements.txt
ai-engine/: __init__.py  main.py  ollama_client.py  rca_engine.py  recommendation_engine.py  requirements.txt
backend/: mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  test_cluster_container.py  test_db.py
backend/app/: main.py
backend/app/core/: alerting.py  auth.py  cluster_manager.py  config.py  correlation_engine.py  database.py  dependency_engine.py  event_bus.py  k8s_collector.py  logging_config.py  microservice_clients.py  middleware.py  redis_store.py  retry.py
backend/app/core/ai_agents/: __init__.py  agent_coordinator.py  correlation_agent.py  cpu_agent.py  memory_agent.py  network_agent.py  storage_agent.py
backend/app/routers/: auth.py  clusters.py  dashboard.py  websocket.py
backend/app/services/: broadcast.py  payload_builder.py  persistence.py  state.py  websocket_manager.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/services/: __init__.py  alerting.py  metrics.py
backend/services/kube/: __init__.py  client.py  discovery.py  events.py  topology.py  watchers.py
docker/: loki.yml  otel-collector.yml  prometheus.yml
docs/: DEPLOYMENT.md  SYSTEM_DESIGN.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
k8s/: rbac.yaml  (+2 more)
(+93 files in other folders)
