[project]
name = "kubemind-backend"
version = "3.0.0"
description = "AI-powered real-time Kubernetes observability platform"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "kubernetes.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "sqlalchemy.*",
    "aiosmtplib.*",
    "aiokafka.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
